salida_requests_debug.txt
Traceback (most recent call last):
  File "/Users/rodrigofernandezdelrio/Desktop/Project Diario Oficial/manage.py", line 24, in <module>
    main()
  File "/Users/rodrigofernandezdelrio/Desktop/Project Diario Oficial/manage.py", line 20, in main
    execute_from_command_line(sys.argv)
  File "/Users/rodrigofernandezdelrio/.pyenv/versions/3.10.13/lib/python3.10/site-packages/django/core/management/__init__.py", line 442, in execute_from_command_line
    utility.execute()
  File "/Users/rodrigofernandezdelrio/.pyenv/versions/3.10.13/lib/python3.10/site-packages/django/core/management/__init__.py", line 436, in execute
    self.fetch_command(subcommand).run_from_argv(self.argv)
  File "/Users/rodrigofernandezdelrio/.pyenv/versions/3.10.13/lib/python3.10/site-packages/django/core/management/__init__.py", line 275, in fetch_command
    klass = load_command_class(app_name, subcommand)
  File "/Users/rodrigofernandezdelrio/.pyenv/versions/3.10.13/lib/python3.10/site-packages/django/core/management/__init__.py", line 48, in load_command_class
    module = import_module("%s.management.commands.%s" % (app_name, name))
  File "/Users/rodrigofernandezdelrio/.pyenv/versions/3.10.13/lib/python3.10/importlib/__init__.py", line 126, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
  File "<frozen importlib._bootstrap>", line 1050, in _gcd_import
  File "<frozen importlib._bootstrap>", line 1027, in _find_and_load
  File "<frozen importlib._bootstrap>", line 1006, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 688, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 883, in exec_module
  File "<frozen importlib._bootstrap>", line 241, in _call_with_frames_removed
  File "/Users/rodrigofernandezdelrio/Desktop/Project Diario Oficial/alerts/management/commands/informe_diario_oficial.py", line 3, in <module>
    from alerts.scraper_diario_oficial import obtener_sumario_diario_oficial
  File "/Users/rodrigofernandezdelrio/Desktop/Project Diario Oficial/alerts/scraper_diario_oficial.py", line 271
    except Exception as e:
    ^^^^^^
SyntaxError: invalid syntax
